--- a/about.html
+++ b/about.html
@@ -1,160 +1,163 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Azibuyemasisweni Tourism Consulting Agency</title>
-		  <meta charset="UTF-8">
-		  <meta name="Azibuyemasisweni Tourism Consulting Agency website" content="All information about Azibuyemasisweni Tourism Consulting Agency">
-		  <meta name="Azibuyemasisweni" content="HTML,CSS">
-		  <meta name="Desiree Noxolo Gumede" content="Azibuyemasisweni">
-		  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  <link rel="stylesheet" type="text/css" href="css/style.css">
-	  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Azibuyemasisweni Tourism Consulting Agency</title>
+    <meta charset="UTF-8">
+    <meta name="Azibuyemasisweni Tourism Consulting Agency website" content="All information about Azibuyemasisweni Tourism Consulting Agency">
+    <meta name="Azibuyemasisweni" content="HTML,CSS">
+    <meta name="Desiree Noxolo Gumede" content="Azibuyemasisweni">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/media-queries.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	   <!-- POLYFILLS -->
-    
+    <!-- POLYFILLS -->
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-
-</head>	  
+</head>
 
 <body>
 
-	<header>
-<nav>
+    <header>
+        <div class="navbar">
+            <a href="index.html"><img src="IMAGES/logo.png" alt="Azibuyemasisweni logo" style="width:74px;height:78px;padding-left:50px;">
+            </a>
 
-<a href="index.html"><img id="logo" src="IMAGES/logo.png"></a>
+            <div class="dropdown">
+                <button class="dropbtn">MENU
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="index.html">HOME</a>
+                    <a href="about.html">ABOUT</a>
+                    <a href="gallery.html">GALLERY</a>
+                    <a href="#box">CONTACT US</a>
+                </div>
+            </div>
+        </div>
+    </header>
 
-  <button class="dropbtn">MENU</button>
-  <ul id="nav">
-  
-   <a href="index.html" class="sel">HOME</a>
-	      <a href="about.html">ABOUT</a>
-	      <a href="#">PROJECTS</a>
-	      <a href="#">VIDEOS</a>
-	      <a href="gallery.html">GALLERY</a>
-	      <a href="#box">CONTACT US</a>
-   
-  </ul>
+    <div id="box-overlay"></div>
 
- </nav> 
+    <section class="about-hero-image">
+        <h1>ABOUT</h1>
+    </section>
 
-</header>
+    <main>
+        <section class="information">
+            <h1>Introduction</h1>
 
-	<div id="box-overlay"></div>
+            <hr>
 
-	<section class="about-hero-image">
-	    <h1>ABOUT</h1>
-	</section>
+            <h4>Azibuyemasisweni Tourism Consulting Agency is a registered business dealing with:</h4>
 
- <main>  
-	<section class="information">
-		<h1>Introduction</h1>
+            <ul>
+                <li>Community Development Tourism</li>
+                <li>Tourism Awareness</li>
+                <li>Product Development</li>
+                <li>Tourism Workshops</li>
+                <li>Youth Development Programs</li>
+                <li>Entrepreneurship Programs</li>
+                <li>Unemployed Graduates Placement Programs</li>
+            </ul>
 
-		<hr>
+            <h4>We are CATHSETA Accredited and Nationally Accredited as Tourism Specialists in South Africa.</h4>
+            <section class="plan">
+                <h1>The Plan</h1>
 
-		<h4>Azibuyemasisweni Tourism Consulting Agency is a registered business dealing with:</h4>
+                <hr>
 
-		<ul>
-			<li>Community Development Tourism</li>
-			<li>Tourism Awareness</li>
-			<li>Product Development</li>
-			<li>Tourism Workshops</li>
-			<li>Youth Development Programs</li>
-			<li>Entrepreneurship Programs</li>
-			<li>Unemployed Graduates Placement Programs</li>
-		</ul>
+                <p>We develop and deliver employment readiness workshops to engage, and equip unemployed graduates around South Africa with the necessary skills they will need going into the corporate world. This transformative program will include interactive exercises, practical examples, and real time coaching in a fun yet focused environment.</p>
 
-		<h4>We are CATHSETA Accredited and Nationally Accredited as Tourism Specialists in South Africa.</h4>
-<section class="plan">
-		<h1>The Plan</h1>
+                <div class="images1">
+                    <img src="images/13.jpg">
+                    <img src="images/4.jpg">
+                    <img src="images/16.jpg">
+                    <img src="images/12.jpg">
+                </div>
 
-		<hr>
+            </section>
 
-		<p>We develop and deliver employment readiness workshops to engage, and equip unemployed graduates around South Africa with the necessary skills they will need going into the corporate world.
-		This transformative program will include interactive exercises, practical
-		examples, and real time coaching in a fun yet focused environment.</p>
+            <h3>CONTACT US</h3>
+            <hr>
+            <div class="contact">
+                <h3>Contact Info</h3>
+                <p><i class="fa fa-facebook-f"></i>Azibuyemasisweni Tourism Consulting Agency</p>
+                <p><i class="fa fa-envelope"></i>info@azibuyemasisweni.com</p>
+            </div>
 
-		<div class="images1">
-		   <img src="images/13.jpg">
-		   <img src="images/4.jpg">
-		   <img src="images/16.jpg">
-		   <img src="images/12.jpg">
-		</div>
-</section>
+            <div class="input-group">
+                <input type="text" class="topfield1" placeholder="Your email.." />
+                <input type="text" class="topfield2" placeholder="Your name.." />
+                <br>
+                <br>
+                <input type="text" class="bottomfield" placeholder="Start typing your message.." />
+                <br>
+                <br>
+                <br>
+                <input type="submit" value="SEND" id="submit-btn">
+            </div>
 
-		<!-- <div id='box1'></div> -->
+        </section>
 
-		<h3>CONTACT US</h3>
-		<hr>
-		<div class="contact">
-        	<h3>Contact Info</h3>
-          	<p><i class="fa fa-facebook-f"></i>Azibuyemasisweni Tourism Consulting Agency</p>
-          	<p><i class="fa fa-envelope"></i>info@azibuyemasisweni.com</p>
+
+    </main>
+
+    <footer>
+
+        <div class="map">
+            <button id="map-button" onclick="myFunc()">LOCATE US ON MAP</button>
+
+            <div id="map-block" class="map-block col-sm-12">
+                <p>KZN 6 Palm building Mashona house, Suite 4A uMhlanga</p>
+                <div id="map"></div>
+            </div>
+
+            <div id="box"></div>
         </div>
 
-        <div class="input-group">
-          <input type="text" class="topfield1" placeholder="Your email.."/>
-          <input type="text" class="topfield2" placeholder="Your name.."/><br><br>
-          <input type="text" class="bottomfield" placeholder="Start typing your message.."/><br><br><br>
-          <input type="submit" value="SEND" id="submit-btn">
-        </div>
-
-	</section>
+        <small>Copyright &copy; 2017 | All Rights Reserved</small>
+    </footer>
 
 
-</main>
-
-<!-- <div id='full'></div> -->
-
-	<footer>
-
-		<div class="map">
-			<button id="map-button" onclick="myFunc()">LOCATE US ON MAP</button>
-
-			<div id="map-block" class="map-block col-sm-12">
-				<p>KZN 6 Palm building Mashona house, Suite 4A uMhlanga</p>
-    			<div id="map"></div>
-			</div>
-
-			<div id="box"></div>
-		</div>
-
-		<small>Copyright &copy; 2017 | All Rights Reserved</small>
-	</footer>
-
-	<script type="text/javascript">
-		function myFunc() {
-    		var x = document.getElementById('map-block');
-    		if (x.style.display === 'none') {
-        		x.style.display = 'block';
-    		} 	
-    		else {
-        	x.style.display = 'none';
-    		}
-		}
+    <!-- Map -->
 
 
-	</script>
-
-<!---------------------->
-
-	<script>
-      function initMap() {
-        var uluru = {lat: -29.7247624, lng:31.0674387 };
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
-          center: uluru
-        });
-        var marker = new google.maps.Marker({
-          position: uluru,
-          map: map
-        });
-      }
+    <script type="text/javascript">
+        function myFunc() {
+            var x = document.getElementById('map-block');
+            if (x.style.display === 'none') {
+                x.style.display = 'block';
+            } else {
+                x.style.display = 'none';
+            }
+        }
     </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNyPaFFmkhL33WCx-VLeEVcFRcJ_2Kg2Y&callback=initMap">
+
+    <!---->
+
+    <script>
+        function initMap() {
+            var uluru = {
+                lat: -29.7247624,
+                lng: 31.0674387
+            };
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 4,
+                center: uluru
+            });
+            var marker = new google.maps.Marker({
+                position: uluru,
+                map: map
+            });
+        }
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNyPaFFmkhL33WCx-VLeEVcFRcJ_2Kg2Y&callback=initMap">
     </script>
 
 </body>
+
 </html>
